database interface pattern
